--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,4 +23,4 @@ jobs:
           protocol: ftps
           port: 21
           server-dir: /test1  # adapte ce chemin si nécessaire
-          local-dir: ./test1  # ou ./dist, ./build, etc. selon ton projet
+          local-dir: ./test1/  # ou ./dist, ./build, etc. selon ton projet
