--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,5 +22,5 @@ jobs:
           password: test1
           protocol: ftps
           port: 21
-          server-dir: /test1  # adapte ce chemin si nécessaire
+          server-dir: /test1/  # adapte ce chemin si nécessaire
           local-dir: ./test1/  # ou ./dist, ./build, etc. selon ton projet
