--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,5 +33,5 @@ jobs:
           password: test1
           protocol: ftps
           port: 21
-          server-dir: /test1/test2  # adapte ce chemin si nécessaire
-          local-dir: ./test1/voila  # ou ./dist, ./build, etc. selon ton projet
+          server-dir: /test1/test2/  # adapte ce chemin si nécessaire
+          local-dir: ./test1/voila/  # ou ./dist, ./build, etc. selon ton projet
