--- a/.github/workflows/smb.yml
+++ b/.github/workflows/smb.yml
@@ -6,25 +6,25 @@ on:
       - main
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js (ou Python, selon ton projet)
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run unit tests
-        run: npm test
+      - name: Install dependencies
+        run: npm install
+      
+      - name: Run unit tests
+        run: npm test
 
   deploy:
-  needs: test
+    needs: test
     runs-on: self-hosted
     environment: production
 
