test avec juste le choix

--- a/.github/workflows/smb.yml
+++ b/.github/workflows/smb.yml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      target_env:
+        description: 'Target environment (blue or green)'
+        required: true
+        default: 'blue'
+
 
 jobs:
   test:
